@@ -1,3 +1,10 @@
+2005-09-09  Damon Chaplin  <damon@gnome.org>
+
+	* gtkdoc-mkdb.in: 
+	* style.css: 
+	* gtk-doc.xsl: Use a fixed navigation bar at the top of the page.
+	Patch from Stefan Kost with minor changes by me. (#313569)
+
 2005-08-18  Damon Chaplin  <damon@gnome.org>
 
 	* gtkdoc-scangobj.in: added "const" in a few places to avoid lots
